--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="icon" type="image/svg+xml" href="planner-icon.svg">
 <title>Planner — Failsafe v3 (Save + Edit Mode + Custom Images)</title>
-<link rel="stylesheet" href="index.css">
+<link rel="stylesheet" href="Index.css">
 
 </head>
 <body class="dark-contrast">
@@ -770,16 +770,17 @@
   <div class="duck-text" id="duck-text">Duck mode ready.</div>
 </div>
 
-<script type="module" src="ICS-IMPORT.js"></script>
+<script src="ICS-IMPORT.js"></script>
 <script src="index.js"></script>
 <script src="Index2.js"></script>
-<script type="module" src="Index3.js"></script>
-<script type="module" src="Index4.js"></script>
+<script src="Index3.js"></script>
+<script src="Index4.js"></script>
 <script src="Index5.js"></script>
 
 
 </body>
 </html>
+
 
 
 
